--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -69,20 +69,20 @@ changelog:
 
 release:
   github:
-    owner: owasp-amass
+    owner: The-Inceptions-Test
     name: amass
 
 brews:
   -
     name: amass
     tap:
-      owner: owasp-amass
+      owner: The-Inceptions-Test
       name: homebrew-amass
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
-    url_template: "https://github.com/owasp-amass/amass/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
+    url_template: "https://github.com/The-Inceptions-Test/amass/releases/download/{{ .Tag }}/{{ .ArtifactName }}"
     commit_author:
-      name: caffix
-      email: caffix@users.noreply.github.com
+      name: The-Inceptions
+      email: The-Inceptions@users.noreply.github.com
     folder: Formula
     homepage: "https://owasp.org/www-project-amass/"
     description: "In-depth Attack Surface Mapping and Asset Discovery"
@@ -90,3 +90,4 @@ brews:
       system "#{bin}/amass --version"
     install: |
       bin.install "amass"
+
